--- a/Apps/APN-UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -118,6 +118,8 @@
                     <connections>
                         <outlet property="emailTextField" destination="GCe-Ns-Vy3" id="dea-Qv-0T1"/>
                         <outlet property="firstNameTextField" destination="XNO-Pm-1m4" id="Ys2-bz-1OK"/>
+                        <outlet property="loginButton" destination="IaH-JL-VQC" id="TFs-af-gIl"/>
+                        <outlet property="randomLoginButton" destination="iXp-Fu-ehx" id="mPw-vr-piB"/>
                         <outlet property="settings" destination="HPL-cE-0Qb" id="JLf-yj-ixr"/>
                         <outlet property="versionsLabel" destination="jhw-4t-vdr" id="tom-lI-c6D"/>
                     </connections>
@@ -292,7 +294,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="lSD-LL-pFO"/>
                     <connections>
+                        <outlet property="customEventButton" destination="rAK-3p-434" id="kBp-ZR-3sD"/>
+                        <outlet property="logoutButton" destination="gSy-pH-Zuu" id="iyO-Cl-BCD"/>
+                        <outlet property="randomEventButton" destination="yOE-0O-ICW" id="qjU-Ds-0cf"/>
+                        <outlet property="sendDeviceAttributesButton" destination="nOP-Lf-TEx" id="JhJ-OT-hM1"/>
+                        <outlet property="sendProfileAttributesButton" destination="5Np-Wp-Fd7" id="NBb-vR-eGR"/>
                         <outlet property="settings" destination="Kn0-pQ-K5D" id="0cy-hk-K6x"/>
+                        <outlet property="showPushPromptButton" destination="XDM-Yu-1Sg" id="nUT-m6-Gpj"/>
                         <outlet property="userInfoLabel" destination="mIk-22-9js" id="deL-cg-q6O"/>
                         <outlet property="versionsLabel" destination="h1a-Rs-bAS" id="nCt-bx-evz"/>
                     </connections>
@@ -759,6 +767,8 @@
                         <outlet property="copyToClipboardImageView" destination="2LR-Qa-VcE" id="rZf-IP-zMV"/>
                         <outlet property="debugModeToggle" destination="KTX-LK-Tpd" id="2Bu-FU-aXC"/>
                         <outlet property="deviceTokenTextField" destination="jPa-Ye-N0O" id="UIr-fD-2NP"/>
+                        <outlet property="restoreDefaultButton" destination="T4D-Xe-9R6" id="Tf8-Li-aAD"/>
+                        <outlet property="saveButton" destination="946-Or-p70" id="CLp-4j-XXF"/>
                         <outlet property="siteIdTextField" destination="k3o-ac-Zim" id="cGZ-nh-hOq"/>
                         <outlet property="trackDeviceToggle" destination="2zH-fs-NBi" id="pWh-Lk-Nch"/>
                         <outlet property="trackScreenToggle" destination="tgd-Y3-gsY" id="zWF-PI-uVz"/>
