--- a/Apps/APN-UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -564,16 +564,16 @@
                                                 <rect key="frame" x="10" y="230.66666666666669" width="340.66666666666669" height="88"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="auO-5w-BJh">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61.666666666666664" height="88"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="88"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Site Id" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWx-Yh-q4k">
-                                                                <rect key="frame" x="0.0" y="0.0" width="61.666666666666664" height="40"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="40"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                 <color key="textColor" red="0.24313725489999999" green="0.24313725489999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WriteKey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wjf-7e-xqw">
-                                                                <rect key="frame" x="0.0" y="48" width="61.666666666666664" height="40"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CDP API Key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wjf-7e-xqw">
+                                                                <rect key="frame" x="0.0" y="48" width="86.666666666666671" height="40"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                 <color key="textColor" red="0.24313725489999999" green="0.24313725489999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <nil key="highlightedColor"/>
@@ -581,10 +581,10 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jEP-Nb-fe6">
-                                                        <rect key="frame" x="77.666666666666657" y="0.0" width="263" height="88"/>
+                                                        <rect key="frame" x="102.66666666666669" y="0.0" width="238" height="88"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k3o-ac-Zim" customClass="ThemeTextField" customModule="APN_UIKit" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="263" height="40"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="238" height="40"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="40" id="yOs-RS-HtM"/>
                                                                 </constraints>
@@ -592,7 +592,7 @@
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Svx-V1-ygO" customClass="ThemeTextField" customModule="APN_UIKit" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="48" width="263" height="40"/>
+                                                                <rect key="frame" x="0.0" y="48" width="238" height="40"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="40" id="Rhs-TZ-iC2"/>
                                                                 </constraints>
@@ -789,7 +789,7 @@
                         <outlet property="bgQMinTasksTextField" destination="M6C-ZH-JdN" id="Zf2-0O-sDm"/>
                         <outlet property="bgQTakDelayTextField" destination="pSW-8b-6U3" id="oYw-rp-tuL"/>
                         <outlet property="cdnHostTextField" destination="s8J-c0-KKY" id="EUc-Yi-hEU"/>
-                        <outlet property="cdpWriteKeyTextField" destination="Svx-V1-ygO" id="EQv-xx-IdU"/>
+                        <outlet property="cdpApiKeyTextField" destination="Svx-V1-ygO" id="EHA-qN-Px6"/>
                         <outlet property="clipboardView" destination="7xM-ga-FHr" id="BV9-cj-YjX"/>
                         <outlet property="copyToClipboardImageView" destination="2LR-Qa-VcE" id="rZf-IP-zMV"/>
                         <outlet property="debugModeToggle" destination="KTX-LK-Tpd" id="2Bu-FU-aXC"/>
